--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-elastic-carousel": "^0.11.5",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
