--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "framer-motion": "^10.12.4",
     "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -15,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
